target/423/actionscript/AS3.output
State 42 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 97 conflicts: 2 shift/reduce
State 208 conflicts: 14 shift/reduce
State 216 conflicts: 1 shift/reduce
State 246 conflicts: 3 shift/reduce
State 346 conflicts: 1 shift/reduce
State 436 conflicts: 1 shift/reduce
State 460 conflicts: 1 shift/reduce
State 530 conflicts: 1 shift/reduce
State 532 conflicts: 1 shift/reduce
State 540 conflicts: 1 shift/reduce


Grammar

    0 $accept: compilationUnit $end

    1 compilationUnit: as2CompilationUnit
    2                | as3CompilationUnit

    3 as2CompilationUnit: importDefinitions as2Type

    4 importDefinitions: importDefinitions importDefinition
    5                  | /* empty */

    6 as2Type: annotations modifiers as2ClassDefinition
    7        | annotations modifiers as2InterfaceDefinition

    8 as3CompilationUnit: packageDecl packageBlockEntries EOFX

    9 packageBlockEntries: packageBlockEntries packageBlockEntry
   10                    | /* empty */

   11 packageDecl: PACKAGE identifier packageBlock
   12            | PACKAGE packageBlock

   13 packageBlock: LCURLY packageBlockEntries RCURLY

   14 packageBlockEntry: importDefinition
   15                  | annotations modifiers classDefinition
   16                  | annotations modifiers interfaceDefinition
   17                  | annotations modifiers variableDefinition
   18                  | annotations modifiers methodDefinition
   19                  | annotations modifiers namespaceDefinition
   20                  | annotations modifiers useNamespaceDirective
   21                  | SEMI

   22 importDefinition: IMPORT identifierStar semi

   23 semi: SEMI

   24 classDefinition: CLASS ident classExtendsClause implementsClause typeBlock

   25 as2ClassDefinition: CLASS identifier classExtendsClause implementsClause typeBlock

   26 interfaceDefinition: INTERFACE ident interfaceExtendsClause typeBlock

   27 as2InterfaceDefinition: INTERFACE identifier interfaceExtendsClause typeBlock

   28 classExtendsClause: EXTENDS identifier
   29                   | /* empty */

   30 interfaceExtendsClause: EXTENDS identifier commaIdentifiers
   31                       | /* empty */

   32 commaIdentifiers: COMMA identifier commaIdentifiers
   33                 | /* empty */

   34 implementsClause: IMPLEMENTS identifier commaIdentifiers
   35                 | /* empty */

   36 typeBlock: LCURLY typeBlockEntries RCURLY

   37 typeBlockEntries: typeBlockEntry typeBlockEntries
   38                 | /* empty */

   39 typeBlockEntry: annotations modifiers variableDefinition
   40               | annotations modifiers methodDefinition
   41               | importDefinition
   42               | as2IncludeDirective

   43 as2IncludeDirective: INCLUDE_DIRECTIVE STRING_LITERAL

   44 includeDirective: INCLUDE STRING_LITERAL semi

   45 blockOrSemi: block
   46            | semi

   47 optionalTypeExpression: typeExpression
   48                       | /* empty */

   49 methodDefinition: FUNCTION optionalAccessorRole ident parameterDeclarationList optionalTypeExpression blockOrSemi

   50 optionalAccessorRole: accessorRole
   51                     | /* empty */

   52 accessorRole: GET
   53             | SET

   54 namespaceDefinition: NAMESPACE ident

   55 useNamespaceDirective: USE NAMESPACE ident semi

   56 commaVariableDeclarators: COMMA variableDeclarator commaVariableDeclarators
   57                         | /* empty */

   58 variableDefinition: varOrConst variableDeclarator commaVariableDeclarators semi

   59 varOrConst: VAR
   60           | CONST

   61 optionalVariableInitializer: variableInitializer
   62                            | /* empty */

   63 variableDeclarator: ident optionalTypeExpression optionalVariableInitializer

   64 declaration: varOrConst variableDeclarator declarationTail

   65 declarationTail: commaVariableDeclarators

   66 variableInitializer: ASSIGN assignmentExpression

   67 commaParameterDeclaration: COMMA parameterDeclaration commaParameterDeclaration
   68                          | /* empty */

   69 parameterDeclarationList: LPAREN RPAREN
   70                         | LPAREN parameterDeclaration commaParameterDeclaration RPAREN

   71 parameterDeclaration: basicParameterDeclaration
   72                     | parameterRestDeclaration

   73 basicParameterDeclaration: ident optionalTypeExpression parameterDefault
   74                          | CONST ident optionalTypeExpression parameterDefault
   75                          | ident optionalTypeExpression
   76                          | CONST ident optionalTypeExpression

   77 parameterDefault: ASSIGN assignmentExpression

   78 parameterRestDeclaration: REST ident
   79                         | REST

   80 blockEntries: blockEntry blockEntries
   81             | /* empty */

   82 block: LCURLY blockEntries RCURLY

   83 blockEntry: statement

   84 condition: LPAREN expression RPAREN

   85 statement: superStatement
   86          | block
   87          | declarationStatement
   88          | expressionStatement
   89          | ifStatement
   90          | forEachStatement
   91          | forStatement
   92          | whileStatement
   93          | doWhileStatement
   94          | withStatement
   95          | switchStatement
   96          | breakStatement
   97          | continueStatement
   98          | returnStatement
   99          | throwStatement
  100          | tryStatement
  101          | defaultXMLNamespaceStatement
  102          | SEMI

  103 superStatement: SUPER arguments semi

  104 declarationStatement: declaration semi

  105 expressionStatement: expressionList semi

  106 ifStatement: IF condition statement elseClause
  107            | IF condition statement

  108 elseClause: ELSE statement

  109 throwStatement: THROW expression semi

  110 tryStatement: TRY block finallyBlock
  111             | TRY block catchBlocks finallyBlock
  112             | TRY block catchBlocks

  113 catchBlocks: catchBlock catchBlocks
  114            | /* empty */

  115 catchBlock: CATCH LPAREN ident optionalTypeExpression RPAREN block

  116 finallyBlock: FINALLY block

  117 returnStatement: RETURN expression semi
  118                | RETURN semi

  119 continueStatement: CONTINUE semi

  120 breakStatement: BREAK semi

  121 switchStatement: SWITCH condition switchBlock

  122 switchBlock: LCURLY caseStatements RCURLY

  123 caseStatements: caseStatements caseStatement
  124               | /* empty */

  125 caseStatement: CASE expression COLON switchStatementList

  126 optionalDefaultStatement: defaultStatement
  127                         | /* empty */

  128 defaultStatement: DEFAULT COLON switchStatementList

  129 switchStatementList: statements optionalDefaultStatement

  130 statements: statement statements
  131           | /* empty */

  132 forEachStatement: FOR EACH LPAREN forInClause RPAREN statement

  133 forStatement: FOR LPAREN forInClause RPAREN statement
  134             | FOR LPAREN traditionalForClause RPAREN statement

  135 traditionalForClause: forInit SEMI forCond SEMI forIter

  136 forInClause: forInClauseDecl IN forInClauseTail

  137 forInClauseDecl: declaration

  138 forInClauseTail: expressionList

  139 forInit: declaration
  140        | expressionList
  141        | /* empty */

  142 forCond: expressionList
  143        | /* empty */

  144 forIter: expressionList
  145        | /* empty */

  146 whileStatement: WHILE condition statement

  147 doWhileStatement: DO statement WHILE condition semi

  148 withStatement: WITH condition statement

  149 defaultXMLNamespaceStatement: DEFAULT XML NAMESPACE ASSIGN expression semi

  150 typeExpression: COLON identifier
  151               | COLON VOID
  152               | COLON STAR

  153 identifier: qualifiedIdent

  154 propertyIdentifier: STAR
  155                   | ident

  156 qualifier: propertyIdentifier
  157          | reservedNamespace

  158 simpleQualifiedIdentifier: propertyIdentifier
  159                          | qualifier DBL_COLON propertyIdentifier
  160                          | qualifier DBL_COLON brackets

  161 expressionQualifiedIdentifier: encapsulatedExpression DBL_COLON propertyIdentifier
  162                              | encapsulatedExpression DBL_COLON brackets

  163 nonAttributeQualifiedIdentifier: simpleQualifiedIdentifier
  164                                | expressionQualifiedIdentifier

  165 qualifiedIdentifier: e4xAttributeIdentifier
  166                    | nonAttributeQualifiedIdentifier

  167 qualifiedIdent: namespaceName DBL_COLON ident
  168               | ident

  169 namespaceName: IDENT
  170              | reservedNamespace

  171 reservedNamespace: PUBLIC
  172                  | PRIVATE
  173                  | PROTECTED
  174                  | INTERNAL

  175 dotIdents: DOT ident dotIdents
  176          | /* empty */

  177 identifierStar: ident dotIdents DOT STAR
  178               | ident dotIdents

  179 annotations: annotation annotations
  180            | includeDirective annotations
  181            | /* empty */

  182 annotation: LBRACK ident annotationParamList RBRACK
  183           | LBRACK ident RBRACK

  184 moreAnnotationParams: COMMA annotationParam moreAnnotationParams
  185                     | /* empty */

  186 annotationParamList: LPAREN annotationParam moreAnnotationParams RPAREN
  187                    | LPAREN RPAREN

  188 annotationParam: ident ASSIGN constant
  189                | constant
  190                | ident

  191 modifiers: modifier modifiers
  192          | /* empty */

  193 modifier: namespaceName
  194         | STATIC
  195         | FINAL
  196         | ENUMERABLE
  197         | EXPLICIT
  198         | OVERRIDE
  199         | DYNAMIC
  200         | INTRINSIC

  201 arguments: LPAREN expressionList RPAREN
  202          | LPAREN RPAREN

  203 arrayLiteral: LBRACK elementList RBRACK
  204             | LBRACK RBRACK

  205 elementList: COMMA
  206            | nonemptyElementList

  207 moreAssignmentExpressions: COMMA assignmentExpression moreAssignmentExpressions
  208                          | /* empty */

  209 nonemptyElementList: assignmentExpression moreAssignmentExpressions

  210 element: assignmentExpression

  211 objectLiteral: LCURLY fieldList RCURLY
  212              | LCURLY RCURLY

  213 moreLiteralFields: COMMA literalField moreLiteralFields
  214                  | COMMA
  215                  | /* empty */

  216 fieldList: literalField moreLiteralFields

  217 literalField: fieldName COLON element

  218 fieldName: ident
  219          | number

  220 expression: assignmentExpression

  221 expressionList: assignmentExpression moreAssignmentExpressions

  222 assignmentExpression: conditionalExpression assignmentOperator assignmentExpression
  223                     | conditionalExpression

  224 assignmentOperator: ASSIGN
  225                   | STAR_ASSIGN
  226                   | DIV_ASSIGN
  227                   | MOD_ASSIGN
  228                   | PLUS_ASSIGN
  229                   | MINUS_ASSIGN
  230                   | SL_ASSIGN
  231                   | SR_ASSIGN
  232                   | BSR_ASSIGN
  233                   | BAND_ASSIGN
  234                   | BXOR_ASSIGN
  235                   | BOR_ASSIGN
  236                   | LAND_ASSIGN
  237                   | LOR_ASSIGN

  238 conditionalExpression: logicalOrExpression
  239                      | logicalOrExpression QUESTION conditionalSubExpression

  240 conditionalSubExpression: assignmentExpression COLON assignmentExpression

  241 logicalOrExpression: logicalAndExpression
  242                    | logicalAndExpression logicalOrOperator logicalOrExpression

  243 logicalOrOperator: LOR
  244                  | OR

  245 logicalAndExpression: bitwiseOrExpression
  246                     | bitwiseOrExpression logicalAndOperator logicalAndExpression

  247 logicalAndOperator: LAND
  248                   | AND

  249 bitwiseOrExpression: bitwiseXorExpression
  250                    | bitwiseXorExpression BOR bitwiseOrExpression

  251 bitwiseXorExpression: bitwiseAndExpression
  252                     | bitwiseAndExpression BXOR bitwiseXorExpression

  253 bitwiseAndExpression: equalityExpression
  254                     | equalityExpression BAND bitwiseAndExpression

  255 equalityExpression: relationalExpression
  256                   | relationalExpression equalityOperator equalityExpression

  257 equalityOperator: STRICT_EQUAL
  258                 | STRICT_NOT_EQUAL
  259                 | NOT_EQUAL
  260                 | EQUAL

  261 relationalExpression: shiftExpression
  262                     | shiftExpression relationalOperator relationalExpression

  263 relationalOperator: IN
  264                   | LT
  265                   | GT
  266                   | LE
  267                   | GE
  268                   | IS
  269                   | AS
  270                   | INSTANCEOF

  271 shiftExpression: additiveExpression
  272                | additiveExpression shiftOperator shiftExpression

  273 shiftOperator: SL
  274              | SR
  275              | BSR

  276 additiveExpression: multiplicativeExpression
  277                   | multiplicativeExpression additiveOperator additiveExpression

  278 additiveOperator: PLUS
  279                 | MINUS

  280 multiplicativeExpression: unaryExpression
  281                         | unaryExpression multiplicativeOperator multiplicativeExpression

  282 multiplicativeOperator: STAR
  283                       | DIV
  284                       | MOD

  285 unaryExpression: INC unaryExpression
  286                | DEC unaryExpression
  287                | MINUS unaryExpression
  288                | PLUS unaryExpression
  289                | unaryExpressionNotPlusMinus

  290 unaryExpressionNotPlusMinus: DELETE postfixExpression
  291                            | VOID unaryExpression
  292                            | TYPEOF unaryExpression
  293                            | LNOT unaryExpression
  294                            | BNOT unaryExpression
  295                            | postfixExpression

  296 postfixExpression: postfixExpression2
  297                  | postfixExpression2 INC
  298                  | postfixExpression2 DEC

  299 postfixExpression2: primaryExpression
  300                   | postfixExpression LBRACK expression RBRACK
  301                   | postfixExpression E4X_DESC qualifiedIdentifier
  302                   | postfixExpression DOT LPAREN expression RPAREN
  303                   | postfixExpression DOT e4xAttributeIdentifier
  304                   | postfixExpression DOT STAR
  305                   | postfixExpression arguments

  306 e4xAttributeIdentifier: E4X_ATTRI qualifiedIdent
  307                       | E4X_ATTRI STAR
  308                       | E4X_ATTRI LBRACK expression RBRACK

  309 primaryExpression: UNDEFINED
  310                  | constant
  311                  | arrayLiteral
  312                  | objectLiteral
  313                  | functionExpression
  314                  | newExpression
  315                  | encapsulatedExpression
  316                  | e4xAttributeIdentifier
  317                  | qualifiedIdent

  318 constant: number
  319         | STRING_LITERAL
  320         | TRUE
  321         | FALSE
  322         | NULL

  323 number: HEX_LITERAL
  324       | DECIMAL_LITERAL
  325       | OCTAL_LITERAL
  326       | FLOAT_LITERAL

  327 newExpression: NEW fullNewSubexpression arguments
  328              | NEW fullNewSubexpression

  329 fullNewSubexpression: primaryExpression
  330                     | fullNewSubexpression DOT qualifiedIdent
  331                     | fullNewSubexpression brackets

  332 brackets: LBRACK expressionList RBRACK

  333 encapsulatedExpression: LPAREN assignmentExpression RPAREN

  334 functionSignature: parameterDeclarationList optionalTypeExpression

  335 functionCommon: functionSignature block

  336 functionExpression: FUNCTION IDENT functionCommon
  337                   | FUNCTION functionCommon

  338 ident: IDENT
  339      | USE
  340      | XML
  341      | DYNAMIC
  342      | NAMESPACE
  343      | IS
  344      | AS
  345      | GET
  346      | SET


Terminals, with rules where they appear

$end (0) 0
error (256)
PACKAGE (258) 11 12
PUBLIC (259) 171
PRIVATE (260) 172
PROTECTED (261) 173
INTERNAL (262) 174
OVERRIDE (263) 198
FUNCTION (264) 49 336 337
EXTENDS (265) 28 30
IMPLEMENTS (266) 34
VAR (267) 59
STATIC (268) 194
IF (269) 106 107
IMPORT (270) 22
FOR (271) 132 133 134
EACH (272) 132
IN (273) 136 263
WHILE (274) 146 147
DO (275) 147
SWITCH (276) 121
CASE (277) 125
DEFAULT (278) 128 149
ELSE (279) 108
CONST (280) 60 74 76
CLASS (281) 24 25
INTERFACE (282) 26 27
TRUE (283) 320
FALSE (284) 321
DYNAMIC (285) 199 341
USE (286) 55 339
XML (287) 149 340
NAMESPACE (288) 54 55 149 342
IS (289) 268 343
AS (290) 269 344
GET (291) 52 345
SET (292) 53 346
WITH (293) 148
RETURN (294) 117 118
CONTINUE (295) 119
BREAK (296) 120
NULL (297) 322
NEW (298) 327 328
SUPER (299) 103
INSTANCEOF (300) 270
DELETE (301) 290
VOID (302) 151 291
TYPEOF (303) 292
TRY (304) 110 111 112
CATCH (305) 115
FINALLY (306) 116
UNDEFINED (307) 309
THROW (308) 109
FINAL (309) 195
QUESTION (310) 239
LPAREN (311) 69 70 84 115 132 133 134 186 187 201 202 302 333
RPAREN (312) 69 70 84 115 132 133 134 186 187 201 202 302 333
LBRACK (313) 182 183 203 204 300 308 332
RBRACK (314) 182 183 203 204 300 308 332
LCURLY (315) 13 36 82 122 211 212
RCURLY (316) 13 36 82 122 211 212
COLON (317) 125 128 150 151 152 217 240
DBL_COLON (318) 159 160 161 162 167
COMMA (319) 32 56 67 184 205 207 213 214
ASSIGN (320) 66 77 149 188 224
EQUAL (321) 260
STRICT_EQUAL (322) 257
LNOT (323) 293
BNOT (324) 294
NOT_EQUAL (325) 259
STRICT_NOT_EQUAL (326) 258
DIV (327) 283
DIV_ASSIGN (328) 226
PLUS (329) 278 288
PLUS_ASSIGN (330) 228
INC (331) 285 297
MINUS (332) 279 287
MINUS_ASSIGN (333) 229
DEC (334) 286 298
STAR (335) 152 154 177 282 304 307
STAR_ASSIGN (336) 225
MOD (337) 284
MOD_ASSIGN (338) 227
SR (339) 274
SR_ASSIGN (340) 231
BSR (341) 275
BSR_ASSIGN (342) 232
GE (343) 267
GT (344) 265
SL (345) 273
SL_ASSIGN (346) 230
LE (347) 266
LT (348) 264
BXOR (349) 252
BXOR_ASSIGN (350) 234
BOR (351) 250
BOR_ASSIGN (352) 235
LOR (353) 243
BAND (354) 254
BAND_ASSIGN (355) 233
LAND (356) 247
LAND_ASSIGN (357) 236
LOR_ASSIGN (358) 237
E4X_ATTRI (359) 306 307 308
SEMI (360) 21 23 102 135
DOT (361) 175 177 302 303 304 330
E4X_DESC (362) 301
REST (363) 78 79
AND (364) 248
INTRINSIC (365) 200
OR (366) 244
IDENT (367) 169 336 338
EOFX (368) 8
ENUMERABLE (369) 196
EXPLICIT (370) 197
FLOAT_LITERAL (371) 326
DECIMAL_LITERAL (372) 324
OCTAL_LITERAL (373) 325
STRING_LITERAL (374) 43 44 319
HEX_LITERAL (375) 323
INCLUDE (376) 44
INCLUDE_DIRECTIVE (377) 43


Nonterminals, with rules where they appear

$accept (123)
    on left: 0
compilationUnit (124)
    on left: 1 2, on right: 0
as2CompilationUnit (125)
    on left: 3, on right: 1
importDefinitions (126)
    on left: 4 5, on right: 3 4
as2Type (127)
    on left: 6 7, on right: 3
as3CompilationUnit (128)
    on left: 8, on right: 2
packageBlockEntries (129)
    on left: 9 10, on right: 8 9 13
packageDecl (130)
    on left: 11 12, on right: 8
packageBlock (131)
    on left: 13, on right: 11 12
packageBlockEntry (132)
    on left: 14 15 16 17 18 19 20 21, on right: 9
importDefinition (133)
    on left: 22, on right: 4 14 41
semi (134)
    on left: 23, on right: 22 44 46 55 58 103 104 105 109 117 118 119
    120 147 149
classDefinition (135)
    on left: 24, on right: 15
as2ClassDefinition (136)
    on left: 25, on right: 6
interfaceDefinition (137)
    on left: 26, on right: 16
as2InterfaceDefinition (138)
    on left: 27, on right: 7
classExtendsClause (139)
    on left: 28 29, on right: 24 25
interfaceExtendsClause (140)
    on left: 30 31, on right: 26 27
commaIdentifiers (141)
    on left: 32 33, on right: 30 32 34
implementsClause (142)
    on left: 34 35, on right: 24 25
typeBlock (143)
    on left: 36, on right: 24 25 26 27
typeBlockEntries (144)
    on left: 37 38, on right: 36 37
typeBlockEntry (145)
    on left: 39 40 41 42, on right: 37
as2IncludeDirective (146)
    on left: 43, on right: 42
includeDirective (147)
    on left: 44, on right: 180
blockOrSemi (148)
    on left: 45 46, on right: 49
optionalTypeExpression (149)
    on left: 47 48, on right: 49 63 73 74 75 76 115 334
methodDefinition (150)
    on left: 49, on right: 18 40
optionalAccessorRole (151)
    on left: 50 51, on right: 49
accessorRole (152)
    on left: 52 53, on right: 50
namespaceDefinition (153)
    on left: 54, on right: 19
useNamespaceDirective (154)
    on left: 55, on right: 20
commaVariableDeclarators (155)
    on left: 56 57, on right: 56 58 65
variableDefinition (156)
    on left: 58, on right: 17 39
varOrConst (157)
    on left: 59 60, on right: 58 64
optionalVariableInitializer (158)
    on left: 61 62, on right: 63
variableDeclarator (159)
    on left: 63, on right: 56 58 64
declaration (160)
    on left: 64, on right: 104 137 139
declarationTail (161)
    on left: 65, on right: 64
variableInitializer (162)
    on left: 66, on right: 61
commaParameterDeclaration (163)
    on left: 67 68, on right: 67 70
parameterDeclarationList (164)
    on left: 69 70, on right: 49 334
parameterDeclaration (165)
    on left: 71 72, on right: 67 70
basicParameterDeclaration (166)
    on left: 73 74 75 76, on right: 71
parameterDefault (167)
    on left: 77, on right: 73 74
parameterRestDeclaration (168)
    on left: 78 79, on right: 72
blockEntries (169)
    on left: 80 81, on right: 80 82
block (170)
    on left: 82, on right: 45 86 110 111 112 115 116 335
blockEntry (171)
    on left: 83, on right: 80
condition (172)
    on left: 84, on right: 106 107 121 146 147 148
statement (173)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102,
    on right: 83 106 107 108 130 132 133 134 146 147 148
superStatement (174)
    on left: 103, on right: 85
declarationStatement (175)
    on left: 104, on right: 87
expressionStatement (176)
    on left: 105, on right: 88
ifStatement (177)
    on left: 106 107, on right: 89
elseClause (178)
    on left: 108, on right: 106
throwStatement (179)
    on left: 109, on right: 99
tryStatement (180)
    on left: 110 111 112, on right: 100
catchBlocks (181)
    on left: 113 114, on right: 111 112 113
catchBlock (182)
    on left: 115, on right: 113
finallyBlock (183)
    on left: 116, on right: 110 111
returnStatement (184)
    on left: 117 118, on right: 98
continueStatement (185)
    on left: 119, on right: 97
breakStatement (186)
    on left: 120, on right: 96
switchStatement (187)
    on left: 121, on right: 95
switchBlock (188)
    on left: 122, on right: 121
caseStatements (189)
    on left: 123 124, on right: 122 123
caseStatement (190)
    on left: 125, on right: 123
optionalDefaultStatement (191)
    on left: 126 127, on right: 129
defaultStatement (192)
    on left: 128, on right: 126
switchStatementList (193)
    on left: 129, on right: 125 128
statements (194)
    on left: 130 131, on right: 129 130
forEachStatement (195)
    on left: 132, on right: 90
forStatement (196)
    on left: 133 134, on right: 91
traditionalForClause (197)
    on left: 135, on right: 134
forInClause (198)
    on left: 136, on right: 132 133
forInClauseDecl (199)
    on left: 137, on right: 136
forInClauseTail (200)
    on left: 138, on right: 136
forInit (201)
    on left: 139 140 141, on right: 135
forCond (202)
    on left: 142 143, on right: 135
forIter (203)
    on left: 144 145, on right: 135
whileStatement (204)
    on left: 146, on right: 92
doWhileStatement (205)
    on left: 147, on right: 93
withStatement (206)
    on left: 148, on right: 94
defaultXMLNamespaceStatement (207)
    on left: 149, on right: 101
typeExpression (208)
    on left: 150 151 152, on right: 47
identifier (209)
    on left: 153, on right: 11 25 27 28 30 32 34 150
propertyIdentifier (210)
    on left: 154 155, on right: 156 158 159 161
qualifier (211)
    on left: 156 157, on right: 159 160
simpleQualifiedIdentifier (212)
    on left: 158 159 160, on right: 163
expressionQualifiedIdentifier (213)
    on left: 161 162, on right: 164
nonAttributeQualifiedIdentifier (214)
    on left: 163 164, on right: 166
qualifiedIdentifier (215)
    on left: 165 166, on right: 301
qualifiedIdent (216)
    on left: 167 168, on right: 153 306 317 330
namespaceName (217)
    on left: 169 170, on right: 167 193
reservedNamespace (218)
    on left: 171 172 173 174, on right: 157 170
dotIdents (219)
    on left: 175 176, on right: 175 177 178
identifierStar (220)
    on left: 177 178, on right: 22
annotations (221)
    on left: 179 180 181, on right: 6 7 15 16 17 18 19 20 39 40 179
    180
annotation (222)
    on left: 182 183, on right: 179
moreAnnotationParams (223)
    on left: 184 185, on right: 184 186
annotationParamList (224)
    on left: 186 187, on right: 182
annotationParam (225)
    on left: 188 189 190, on right: 184 186
modifiers (226)
    on left: 191 192, on right: 6 7 15 16 17 18 19 20 39 40 191
modifier (227)
    on left: 193 194 195 196 197 198 199 200, on right: 191
arguments (228)
    on left: 201 202, on right: 103 305 327
arrayLiteral (229)
    on left: 203 204, on right: 311
elementList (230)
    on left: 205 206, on right: 203
moreAssignmentExpressions (231)
    on left: 207 208, on right: 207 209 221
nonemptyElementList (232)
    on left: 209, on right: 206
element (233)
    on left: 210, on right: 217
objectLiteral (234)
    on left: 211 212, on right: 312
moreLiteralFields (235)
    on left: 213 214 215, on right: 213 216
fieldList (236)
    on left: 216, on right: 211
literalField (237)
    on left: 217, on right: 213 216
fieldName (238)
    on left: 218 219, on right: 217
expression (239)
    on left: 220, on right: 84 109 117 125 149 300 302 308
expressionList (240)
    on left: 221, on right: 105 138 140 142 144 201 332
assignmentExpression (241)
    on left: 222 223, on right: 66 77 207 209 210 220 221 222 240 333
assignmentOperator (242)
    on left: 224 225 226 227 228 229 230 231 232 233 234 235 236 237,
    on right: 222
conditionalExpression (243)
    on left: 238 239, on right: 222 223
conditionalSubExpression (244)
    on left: 240, on right: 239
logicalOrExpression (245)
    on left: 241 242, on right: 238 239 242
logicalOrOperator (246)
    on left: 243 244, on right: 242
logicalAndExpression (247)
    on left: 245 246, on right: 241 242 246
logicalAndOperator (248)
    on left: 247 248, on right: 246
bitwiseOrExpression (249)
    on left: 249 250, on right: 245 246 250
bitwiseXorExpression (250)
    on left: 251 252, on right: 249 250 252
bitwiseAndExpression (251)
    on left: 253 254, on right: 251 252 254
equalityExpression (252)
    on left: 255 256, on right: 253 254 256
equalityOperator (253)
    on left: 257 258 259 260, on right: 256
relationalExpression (254)
    on left: 261 262, on right: 255 256 262
relationalOperator (255)
    on left: 263 264 265 266 267 268 269 270, on right: 262
shiftExpression (256)
    on left: 271 272, on right: 261 262 272
shiftOperator (257)
    on left: 273 274 275, on right: 272
additiveExpression (258)
    on left: 276 277, on right: 271 272 277
additiveOperator (259)
    on left: 278 279, on right: 277
multiplicativeExpression (260)
    on left: 280 281, on right: 276 277 281
multiplicativeOperator (261)
    on left: 282 283 284, on right: 281
unaryExpression (262)
    on left: 285 286 287 288 289, on right: 280 281 285 286 287 288
    291 292 293 294
unaryExpressionNotPlusMinus (263)
    on left: 290 291 292 293 294 295, on right: 289
postfixExpression (264)
    on left: 296 297 298, on right: 290 295 300 301 302 303 304 305
postfixExpression2 (265)
    on left: 299 300 301 302 303 304 305, on right: 296 297 298
e4xAttributeIdentifier (266)
    on left: 306 307 308, on right: 165 303 316
primaryExpression (267)
    on left: 309 310 311 312 313 314 315 316 317, on right: 299 329
constant (268)
    on left: 318 319 320 321 322, on right: 188 189 310
number (269)
    on left: 323 324 325 326, on right: 219 318
newExpression (270)
    on left: 327 328, on right: 314
fullNewSubexpression (271)
    on left: 329 330 331, on right: 327 328 330 331
brackets (272)
    on left: 332, on right: 160 162 331
encapsulatedExpression (273)
    on left: 333, on right: 161 162 315
functionSignature (274)
    on left: 334, on right: 335
functionCommon (275)
    on left: 335, on right: 336 337
functionExpression (276)
    on left: 336 337, on right: 313
ident (277)
    on left: 338 339 340 341 342 343 344 345 346, on right: 24 26 49
    54 55 63 73 74 75 76 78 115 155 167 168 175 177 178 182 183 188
    190 218


state 0

    0 $accept: . compilationUnit $end

    PACKAGE  shift, and go to state 1

    $default  reduce using rule 5 (importDefinitions)

    compilationUnit     go to state 2
    as2CompilationUnit  go to state 3
    importDefinitions   go to state 4
    as3CompilationUnit  go to state 5
    packageDecl         go to state 6


state 1

   11 packageDecl: PACKAGE . identifier packageBlock
   12            | PACKAGE . packageBlock

    PUBLIC     shift, and go to state 7
    PRIVATE    shift, and go to state 8
    PROTECTED  shift, and go to state 9
    INTERNAL   shift, and go to state 10
    DYNAMIC    shift, and go to state 11
    USE        shift, and go to state 12
    XML        shift, and go to state 13
    NAMESPACE  shift, and go to state 14
    IS         shift, and go to state 15
    AS         shift, and go to state 16
    GET        shift, and go to state 17
    SET        shift, and go to state 18
    LCURLY     shift, and go to state 19
    IDENT      shift, and go to state 20

    packageBlock       go to state 21
    identifier         go to state 22
    qualifiedIdent     go to state 23
    namespaceName      go to state 24
    reservedNamespace  go to state 25
    ident              go to state 26


state 2

    0 $accept: compilationUnit . $end

    $end  shift, and go to state 27


state 3

    1 compilationUnit: as2CompilationUnit .

    $default  reduce using rule 1 (compilationUnit)


state 4

    3 as2CompilationUnit: importDefinitions . as2Type
    4 importDefinitions: importDefinitions . importDefinition

    IMPORT   shift, and go to state 28
    LBRACK   shift, and go to state 29
    INCLUDE  shift, and go to state 30

    $default  reduce using rule 181 (annotations)

    as2Type           go to state 31
    importDefinition  go to state 32
    includeDirective  go to state 33
    annotations       go to state 34
    annotation        go to state 35


state 5

    2 compilationUnit: as3CompilationUnit .

    $default  reduce using rule 2 (compilationUnit)


state 6

    8 as3CompilationUnit: packageDecl . packageBlockEntries EOFX

    $default  reduce using rule 10 (packageBlockEntries)

    packageBlockEntries  go to state 36


state 7

  171 reservedNamespace: PUBLIC .

    $default  reduce using rule 171 (reservedNamespace)


state 8

  172 reservedNamespace: PRIVATE .

    $default  reduce using rule 172 (reservedNamespace)


state 9

  173 reservedNamespace: PROTECTED .

    $default  reduce using rule 173 (reservedNamespace)


state 10

  174 reservedNamespace: INTERNAL .

    $default  reduce using rule 174 (reservedNamespace)


state 11

  341 ident: DYNAMIC .

    $default  reduce using rule 341 (ident)


state 12

  339 ident: USE .

    $default  reduce using rule 339 (ident)


state 13

  340 ident: XML .

    $default  reduce using rule 340 (ident)


state 14

  342 ident: NAMESPACE .

    $default  reduce using rule 342 (ident)


state 15

  343 ident: IS .

    $default  reduce using rule 343 (ident)


state 16

  344 ident: AS .

    $default  reduce using rule 344 (ident)


state 17

  345 ident: GET .

    $default  reduce using rule 345 (ident)


state 18

  346 ident: SET .

    $default  reduce using rule 346 (ident)


state 19

   13 packageBlock: LCURLY . packageBlockEntries RCURLY

    $default  reduce using rule 10 (packageBlockEntries)

    packageBlockEntries  go to state 37


state 20

  169 namespaceName: IDENT .
  338 ident: IDENT .

    DBL_COLON  reduce using rule 169 (namespaceName)
    $default   reduce using rule 338 (ident)


state 21

   12 packageDecl: PACKAGE packageBlock .

    $default  reduce using rule 12 (packageDecl)


state 22

   11 packageDecl: PACKAGE identifier . packageBlock

    LCURLY  shift, and go to state 19

    packageBlock  go to state 38


state 23

  153 identifier: qualifiedIdent .

    $default  reduce using rule 153 (identifier)


state 24

  167 qualifiedIdent: namespaceName . DBL_COLON ident

    DBL_COLON  shift, and go to state 39


state 25

  170 namespaceName: reservedNamespace .

    $default  reduce using rule 170 (namespaceName)


state 26

  168 qualifiedIdent: ident .

    $default  reduce using rule 168 (qualifiedIdent)


state 27

    0 $accept: compilationUnit $end .

    $default  accept


state 28

   22 importDefinition: IMPORT . identifierStar semi

    DYNAMIC    shift, and go to state 11
    USE        shift, and go to state 12
    XML        shift, and go to state 13
    NAMESPACE  shift, and go to state 14
    IS         shift, and go to state 15
    AS         shift, and go to state 16
    GET        shift, and go to state 17
    SET        shift, and go to state 18
    IDENT      shift, and go to state 40

    identifierStar  go to state 41
    ident           go to state 42


state 29

  182 annotation: LBRACK . ident annotationParamList RBRACK
  183           | LBRACK . ident RBRACK

    DYNAMIC    shift, and go to state 11
    USE        shift, and go to state 12
    XML        shift, and go to state 13
    NAMESPACE  shift, and go to state 14
    IS         shift, and go to state 15
    AS         shift, and go to state 16
    GET        shift, and go to state 17
    SET        shift, and go to state 18
    IDENT      shift, and go to state 40

    ident  go to state 43


state 30

   44 includeDirective: INCLUDE . STRING_LITERAL semi

    STRING_LITERAL  shift, and go to state 44


state 31

    3 as2CompilationUnit: importDefinitions as2Type .

    $default  reduce using rule 3 (as2CompilationUnit)


state 32

    4 importDefinitions: importDefinitions importDefinition .

    $default  reduce using rule 4 (importDefinitions)


state 33

  180 annotations: includeDirective . annotations

    LBRACK   shift, and go to state 29
    INCLUDE  shift, and go to state 30

    $default  reduce using rule 181 (annotations)

    includeDirective  go to state 33
    annotations       go to state 45
    annotation        go to state 35

